inserido numeração de pagina contrato cnpj+

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -103,22 +103,22 @@
         margin: 0px;
     }
 
-    .desloca1{        
+    .paginacao1{        
         margin-top: 1250px;
         margin-left: 850px;
         position: absolute;
     }
-    .desloca2{        
+    .paginacao2{        
         margin-top: 2550px;
         margin-left: 850px;
         position: absolute;
     }
-    .desloca3{        
+    .paginacao3{        
         margin-top: 3850px;
         margin-left: 850px;
         position: absolute;
     }
-    .desloca4{        
+    .paginacao4{        
         margin-top: 5100px;
         margin-left: 850px;
         position: absolute;
@@ -233,10 +233,10 @@ window.onload = function imprimir(){
         
         contrato.innerHTML +=
         `   
-        <p class="desloca1">
+        <p class="paginacao1">
             1/2 
         </p>
-        <p class="desloca2">
+        <p class="paginacao2">
             2/2 
         </p>      
 
@@ -365,16 +365,16 @@ window.onload = function imprimir(){
     else{
         contrato.innerHTML +=
         `
-        <p class="desloca1">
+        <p class="paginacao1">
             1/4 
         </p>
-        <p class="desloca2">
+        <p class="paginacao2">
             2/4 
         </p>
-        <p class="desloca3">
+        <p class="paginacao3">
             3/4 
         </p> 
-        <p class="desloca4">
+        <p class="paginacao4">
             4/4 
         </p>   
         <h2>CONTRATO DE MÚTUO FINANCEIRO</h2><br><br>
