--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="robots" content="noindex">
     <style>
+		
         body {
             font-family: "Arial";
 		}
@@ -152,7 +153,47 @@
 			height: 40px;
 			margin: 4px;
 			border: 1px solid black;
-
+			text-align: center;
+		}
+		.box2 {
+			float: left;
+			width: 500px;
+			height: 25px;
+			margin: 4px;
+			text-align: left;		
+		}
+		.box3 {
+			float: left;
+			width: 500px;
+			height: 25px;
+			margin: 2px;				
+			text-align: left;	
+		}
+		.box4 {			
+			width: 450px;
+			height: 25px;
+			margin: 2px;				
+			margin-left: 350px;	
+			margin-top: 150px;	
+			position: absolute;
+			text-align: center;
+		}
+		.box5 {			
+			width: 450px;
+			height: 25px;
+			margin: 2px;			
+			margin-left: 350px;	
+			margin-top: 180px;	
+			position: absolute;
+			text-align: center;
+		}
+		.box6 {			
+			width: 813px;
+			height: 300px;				
+			border: 1px solid black;			
+			position: absolute;
+			text-align: center;
+			border: 1px solid black;
 		}
 		.after-box {
 			clear: left;
@@ -230,7 +271,26 @@
 		var meses = new Array("01", "02", "03", "04", "05", "06" ,"07", "08", "09", "10", "11", "12")
 		
 
-		for (var i = 1 ; i <= {{object.qtd_parcelas}}; i++){
+		for (var j = 1 ; j <= {{object.qtd_parcelas}}; j++){
+			if(j==1){
+			carne.innerHTML +=	
+				`		
+				<div class="box6">			
+					oi
+				</div>	
+				<div class="box2">			
+					Empréstimo realizado em <strong>${"{{object.qtd_parcelas}}"} parcelas</strong> no dia ${dataEmprestimo}<br>&nbsp</br>	
+				</div>						
+				<div class="box3">			
+					<strong>Fique de olho na data de vencimento da sua parcela</strong>
+				</div>
+				<br2>&nbsp</br2>		
+				<br2>&nbsp</br2>		
+				<br2>&nbsp</br2>		
+				<br2>&nbsp</br2>	
+					
+				`		
+			}	
 			contador_meses++
 			contador_parcela++
 
@@ -253,15 +313,15 @@
 				ano++				
 			}
 
-			if(i<=3){
+			if(j<=3){
 			carne.innerHTML +=	
 				`		
 				<div class="box">			
-					${i}º&nbspParcela ${dia}/${meses[mes-1]}/${ano}				
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}</strong>			
 				</div>		
 				`		
 			}	
-			if(i==3){
+			if(j==3){
 			carne.innerHTML +=
 			`
 				<br2>&nbsp</br2>
@@ -270,15 +330,26 @@
 				
 			`
 			}
-			if(i>3 && i<7){
+			if(j==1 && cliente_nome){
+			carne.innerHTML +=	
+				`		
+				<div class="box4">			
+					<strong>${cliente_nome}</strong>
+				</div>	
+				<div class="box5">			
+					Segunda a Sexta-feira das 14h às 18h
+				</div>	
+				`		
+			}	
+			if(j>3 && j<7){
 			carne.innerHTML +=	
 			`		
 				<div class="box">			
-					${i}º&nbspParcela ${dia}/${meses[mes-1]}/${ano}				
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}</strong>				
 				</div>		
 			`	
 			}
-			if(i==6){
+			if(j==6){
 			carne.innerHTML +=
 			`
 				<br2>&nbsp</br2>
@@ -286,15 +357,15 @@
 				<br2>&nbsp</br2>
 			`
 			}
-			if(i>6 && i<10){		
+			if(j>6 && j<10){		
 			carne.innerHTML +=
 			`			
 				<div class="box">			
-					${i}º&nbspParcela ${dia}/${meses[mes-1]}/${ano}				
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}	</strong>			
 				</div>				
 			`
 			}
-			if(i==9){
+			if(j==9){
 			carne.innerHTML +=
 			`
 				<br2>&nbsp</br2>
@@ -302,190 +373,225 @@
 				<br2>&nbsp</br2>
 			`
 			}
-			if(i>9){		
+			if(j>9){		
 			carne.innerHTML +=
 			`			
 				<div class="box">			
-					${i}º&nbspParcela ${dia}/${meses[mes-1]}/${ano}				
+					${j}º&nbspParcela <strong>${dia}/${meses[mes-1]}/${ano}	</strong>			
 				</div>					
 			`
 			}
 			
 		}
-
-		for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){
-		contador_meses++
-		contador_parcela++
-
-		dia  = aux_dia
-		mes  = aux_mes+contador_meses
-		ano  = aux_ano
-
-		//AJUSTA A DATA QUANDO O MES É FEVEREIRO 
-		if(dia == 30 && mes == 2){
-			dia = 1 
-			mes = 3
-		}
-		
-		//AJUSTA MESES E ANOS 
-		if(mes == 13){
-			contador_meses = 0
-			aux_mes = 1
-			mes = 1	
-			aux_ano++
-			ano++				
-		}
-			
+		var i = 0;	
 		carne.innerHTML +=		
 		`
-		<table cellspacing="0" cellpadding="0" border="1">
-			<!--1º linha-->
-			<tr>
-				<td width="15%" >
-					<p class="content testando"><b>CREDCOOP</b></p>							
-					<p class="content testando">(84) 4131-3210</p>
-				</td>
-				<td width="1px"></td>
-				<td width="39%" colspan="6">
-					<p class="content testando"><b>CREDCOOP</b></p>							
-					<p class="content testando">(84) 4131-3210</p>						
-				</td>						
-			</tr>
-			<!--2º linha-->
-			<tr>					
-				<td width="15%">							
-					<span class="title">&nbspVencimento</span>							
-					<br/>						
-					<p class="content right text">&nbsp${dia}/${meses[mes-1]}/${ano}&nbsp</p>	
-												
-				</td>
-				<td width="1px" ></td>
-				<td width="70%" colspan="5">
-					<p class="content "><b>&nbsp Local de Pagamento: ESCRITÓRIO</b></p>	
+		<p>&nbsp</p>
+		<p>&nbsp</p>		
+		
+		`			
+		
+		for (var i = 0 ; i < {{object.qtd_parcelas}}; i++){
+			contador_meses++
+			contador_parcela++
+
+			dia  = aux_dia
+			mes  = aux_mes+contador_meses
+			ano  = aux_ano
+
+			//AJUSTA A DATA QUANDO O MES É FEVEREIRO 
+			if(dia == 30 && mes == 2){
+				dia = 1 
+				mes = 3
+			}
+			
+			//AJUSTA MESES E ANOS 
+			if(mes == 13){
+				contador_meses = 0
+				aux_mes = 1
+				mes = 1	
+				aux_ano++
+				ano++				
+			}
 					
-				</td>
-				<td width="45%">
-					<span class="title">&nbspVencimento</span>
-					<br/>				
-					<p class="content right text">&nbsp${dia}/${meses[mes-1]}/${ano}&nbsp</p>
-				
-				</td>
-			</tr>
-			<!--3º linha-->
-			<tr>
-				<td width="15%">
-					<span class="title">&nbspValor do Documento</span>
-					<br/>
-					<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
-				</td>
-				<td width="1px"></td>
-				<td width="17%" colspan="5">
-					<span class="title">&nbsp Nome do Cedente</span>
-					<br/>
-					<p class="content left">&nbsp CREDCOOP</p>
-				</td>
-				<td width="15%">
-					<span class="title">&nbspValor do Documento</span>
-					<br/>
-					<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
-				</td>
-			</tr>
-			<!--4º linha-->
-			<tr>
-				<td width="15%">
-					<p class="content left">&nbsp<b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-				</td>
-				<td width="1px">
-					<span class="title"></span>
-					<br/>
-					<p class="content center"></p>
-				</td>
-				<td width="50%" colspan="4">
-					<p class="content left"><b>Data de Emissão:</b></p>							
-					<p class="content left">&nbsp ${data_emissao}</p>						
-				</td>		
-				<td>
-					<span class="title"></span>
-					<br/>
-					<p class="content center"></p>
-				</td>
-				<td width="30%">
-					<p class="content left">&nbsp<b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-				</td>
-			</tr>	
-			<!--5º linha-->			
-			<tr>
-				<td width="15%">
-					<p class="content left">&nbsp(-) Descontos </p>							
-										
-				</td>
-				<td width="1px"></td>
-				<td colspan="5" rowspan="4">
-					<span class="title2">&nbsp <b>INTRUÇÕES:<br/><br/>
-					&nbsp <b>MULTA DE R$: ${valor_multa} APÓS: ${dia}/${meses[mes-1]}/${ano}<br/>
-					&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/></b>
-					</span>				
-				</td>
-				<td width="15%">
-					<p class="content left">&nbsp(-) Descontos </p>
-				</td>
-			</tr>	
-			<!--6º linha-->				
-			<tr>
-				<td width="15%">
-					<p class="content left">&nbsp(+) Acréscimos </p>
-				</td>
-				<td width="1px"></td>
-				<td width="15%">
-					<p class="content left">&nbsp(+) Acréscimos </p>
-				</td>
-			</tr>
-			<!--7º linha-->
-			<tr>
-				<td width="15%">
-					<p class="content left">&nbsp(=) Valor Pago  </p>
-				</td>
-				<td width="1px"></td>
-				<td width="15%">
-					<p class="content left">&nbsp(=) Valor Pago  </p>	
-				</td>
-			</tr>
-			<!--8º linha-->
-			<tr>
-				<td width="15%">
-					<p class="content left"><b>&nbspVisto do Operador</b></p>							
-					<p class="content center">Pago em:</p>						
-					<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>						
-				</td>
-				<td width="1px"></td>
-				<td width="15%">
-					<p class="content left"><b>&nbspVisto do Operador</b></p>							
-					<p class="content center">Pago em:</p>						
-					<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
-				</td>
-			</tr>
-			<!--9º linha-->
-			<tr>
-				<td width="15%">
-					<span class="title">&nbspOutros Acres.</span>
-					<br/>
-					<span class="text"></span>
-				</td>
-				<td width="1px"></td>
-				<td width="39%" colspan="5">
-					<span class="title">&nbspSacado: ${cliente_nome} - CPF: ${cpf} </span><br>						
-					<p class="text">&nbspEndereço: ${rua} - ${numero_casa} - ${bairro} - ${uf} - ${cep}</p>
-					<p class="text">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
-				</td>
-				<td width="15%">
-					<span class="title">&nbspOutros Acres.</span>
-					<br/>
-					<span class="text"></span>
-				</td>
-			</tr>
-		</table>				
-		`
-		}			
+			carne.innerHTML +=		
+			`		
+			<table cellspacing="0" cellpadding="0" border="1">
+				<!--1º linha-->
+				<tr>
+					<td width="15%" >
+						<p class="content testando"><b>CREDCOOP</b></p>							
+						<p class="content testando">(84) 4131-3210</p>
+					</td>
+					<td width="1px"></td>
+					<td width="39%" colspan="6">
+						<p class="content testando"><b>CREDCOOP</b></p>							
+						<p class="content testando">(84) 4131-3210</p>						
+					</td>						
+				</tr>
+				<!--2º linha-->
+				<tr>					
+					<td width="15%">							
+						<span class="title">&nbspVencimento</span>							
+						<br/>						
+						<p class="content right text">&nbsp${dia}/${meses[mes-1]}/${ano}&nbsp</p>	
+													
+					</td>
+					<td width="1px" ></td>
+					<td width="70%" colspan="5">
+						<p class="content "><b>&nbsp Local de Pagamento: ESCRITÓRIO</b></p>	
+						
+					</td>
+					<td width="45%">
+						<span class="title">&nbspVencimento</span>
+						<br/>				
+						<p class="content right text">&nbsp${dia}/${meses[mes-1]}/${ano}&nbsp</p>
+					
+					</td>
+				</tr>
+				<!--3º linha-->
+				<tr>
+					<td width="15%">
+						<span class="title">&nbspValor do Documento</span>
+						<br/>
+						<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
+					</td>
+					<td width="1px"></td>
+					<td width="17%" colspan="5">
+						<span class="title">&nbsp Nome do Cedente</span>
+						<br/>
+						<p class="content left">&nbsp CREDCOOP</p>
+					</td>
+					<td width="15%">
+						<span class="title">&nbspValor do Documento</span>
+						<br/>
+						<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
+					</td>
+				</tr>
+				<!--4º linha-->
+				<tr>
+					<td width="15%">
+						<p class="content left">&nbsp<b>PARCELA: ${i+1}/${aux_qtd_parccela}<b></p>
+					</td>
+					<td width="1px">
+						<span class="title"></span>
+						<br/>
+						<p class="content center"></p>
+					</td>
+					<td width="50%" colspan="4">
+						<p class="content left"><b>Data de Emissão:</b></p>							
+						<p class="content left">&nbsp ${data_emissao}</p>						
+					</td>		
+					<td>
+						<span class="title"></span>
+						<br/>
+						<p class="content center"></p>
+					</td>
+					<td width="30%">
+						<p class="content left">&nbsp<b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
+					</td>
+				</tr>	
+				<!--5º linha-->			
+				<tr>
+					<td width="15%">
+						<p class="content left">&nbsp(-) Descontos </p>							
+											
+					</td>
+					<td width="1px"></td>
+					<td colspan="5" rowspan="4">
+						<span class="title2">&nbsp <b>INTRUÇÕES:<br/><br/>
+						&nbsp <b>MULTA DE R$: ${valor_multa} APÓS: ${dia}/${meses[mes-1]}/${ano}<br/>
+						&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/></b>
+						</span>				
+					</td>
+					<td width="15%">
+						<p class="content left">&nbsp(-) Descontos </p>
+					</td>
+				</tr>	
+				<!--6º linha-->				
+				<tr>
+					<td width="15%">
+						<p class="content left">&nbsp(+) Acréscimos </p>
+					</td>
+					<td width="1px"></td>
+					<td width="15%">
+						<p class="content left">&nbsp(+) Acréscimos </p>
+					</td>
+				</tr>
+				<!--7º linha-->
+				<tr>
+					<td width="15%">
+						<p class="content left">&nbsp(=) Valor Pago  </p>
+					</td>
+					<td width="1px"></td>
+					<td width="15%">
+						<p class="content left">&nbsp(=) Valor Pago  </p>	
+					</td>
+				</tr>
+				<!--8º linha-->
+				<tr>
+					<td width="15%">
+						<p class="content left"><b>&nbspVisto do Operador</b></p>							
+						<p class="content center">Pago em:</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>						
+					</td>
+					<td width="1px"></td>
+					<td width="15%">
+						<p class="content left"><b>&nbspVisto do Operador</b></p>							
+						<p class="content center">Pago em:</p>						
+						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
+					</td>
+				</tr>
+				<!--9º linha-->
+				<tr>
+					<td width="15%">
+						<span class="title">&nbspOutros Acres.</span>
+						<br/>
+						<span class="text"></span>
+					</td>
+					<td width="1px"></td>
+					<td width="39%" colspan="5">
+						<span class="title">&nbspSacado: ${cliente_nome} - CPF: ${cpf} </span><br>						
+						<p class="text">&nbspEndereço: ${rua} - ${numero_casa} - ${bairro} - ${uf} - ${cep}</p>
+						<p class="text">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
+					</td>
+					<td width="15%">
+						<span class="title">&nbspOutros Acres.</span>
+						<br/>
+						<span class="text"></span>
+					</td>
+				</tr>
+			</table>				
+			`
+			if(i == 1)
+			{		
+				carne.innerHTML +=
+				`			
+					<p style="page-break-after:always">&nbsp</p>				
+				`
+			}
+			else if(i == 4)
+			{
+				carne.innerHTML +=
+				`			
+					<p style="page-break-after:always">&nbsp</p>				
+				`
+			}			
+			else if(i == 7)
+			{
+				carne.innerHTML +=
+				`			
+					<p style="page-break-after:always">&nbsp</p>				
+				`
+			}			
+			else if(i == 10)
+			{
+				carne.innerHTML +=
+				`			
+					<p style="page-break-after:always">&nbsp</p>				
+				`
+			}			
+		}
 	}	
 
 	</script>
