--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -140,7 +140,7 @@
         valor_parcela = (cap_iof*(1+(qtd_parcelas*9.5)/100))/qtd_parcelas
         valor_parcela = String(toFixed(valor_parcela, 2))  
 
-    document.getElementById('prestacao').value = valor_parcela
+    document.getElementById('prestacao').value = iof_real
 
     }
 </script>
