--- a/projeto/cliente/templates/cliente_detail.html
+++ b/projeto/cliente/templates/cliente_detail.html
@@ -10,7 +10,7 @@
 
 <h1>{{ object }}</h1>
 
-<div class="col-sm-6">
+<div class="col-sm-6 maiusculo">
     <table class="table table-user-information">
         <tbody>
             <tr>
