--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+
 <div class="class page-header">
     <div class="float-right">
         <a href="{% url 'cliente:cliente_add' %}" type="button" class="btn btn-success">Cadastrar Cliente</a>
@@ -13,7 +14,7 @@
     
     {% if object_list %}
     
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover maiusculo">
         <thead class="thead">
             <tr>
                 <th>Nome</th>                    
