--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -195,6 +195,9 @@
 			text-align: center;
 			border: 1px solid black;
 		}
+		.maiusculo {
+			text-transform: capitalize;
+		}
 		.after-box {
 			clear: left;
 		}
@@ -333,7 +336,7 @@
 			if(j==1 && cliente_nome){
 			carne.innerHTML +=	
 				`		
-				<div class="box4">			
+				<div class="box4 maiusculo">			
 					<strong>${cliente_nome}</strong>
 				</div>	
 				<div class="box5">			
@@ -551,9 +554,9 @@
 					</td>
 					<td width="1px"></td>
 					<td width="39%" colspan="5">
-						<span class="title">&nbspSacado: ${cliente_nome} - CPF: ${cpf} </span><br>						
+						<span class="title maiusculo">&nbspSacado: ${cliente_nome} - CPF: ${cpf} </span><br>						
 						<p class="text">&nbspEndereço: ${rua} - ${numero_casa} - ${bairro} - ${uf} - ${cep}</p>
-						<p class="text">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
+						<p class="text maiusculo">&nbspFiador: ${fiador} - &nbspCPF: ${cpf_fiador}</p>
 					</td>
 					<td width="15%">
 						<span class="title">&nbspOutros Acres.</span>
