Calculos de taxa corrigidos

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -573,9 +573,9 @@ window.onload = function imprimir(){
 
         <div class="paragrafo" >
             <strong> CLÁUSULA1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor 
-            mutuado R$ 503,14, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por 
-            atraso: 2%, IOF Adicional (${aux1}), IOF diário (${aux2}), valor do IOF total: R$ ${iof_real = Number(toFixed(iof_real, 3))}, Valor total 
-            devido: R$ 646,53.
+            mutuado R$ ${cap_iof = Number(toFixed(cap_iof, 2))}, Taxa de Juros a.m (9,50)%, taxa de juros moratório 0,66% ao dia, multa por 
+            atraso: 2%, IOF Adicional (${iof_real}), IOF diário (${iof_real}), valor do IOF total: R$ ${iof_real = Number(toFixed(iof_real, 2))}, Valor total 
+            devido: R$ (josemir)).
         </div>
         <div class="paragrafo" >
             <strong> DO CRÉDITO </strong>            
