--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -74,8 +74,7 @@
                     {% render_field form.valor_prestacao class="form-control" id="prestacao"%}    
                                     
                 </div>   
-            </div>     
-            {{object.data_emprestimo.month}}
+            </div>   
     </div>
 
     {% if emprestimo %}   
@@ -124,7 +123,7 @@
         }
         var aux = 0 
         iof_inicial += ((principal*(qtd_dias*0.0041))/100)
-        iof_inicial = Number(toFixed(iof_inicial, 4)) 
+        //iof_inicial = Number(toFixed(iof_inicial, 4)) 
         iof_inicial += principal*iof_adicional
         iof_inicial = Number(toFixed(iof_inicial, 2))
         
@@ -134,7 +133,7 @@
         var iof_real = 0
 
         iof_real = (valor_emprestado*iof_inicial)/(valor_emprestado-iof_inicial)
-        iof_real = Number(toFixed(iof_real, 2))    
+        //iof_real = Number(toFixed(iof_real, 2))    
 
     //CALCULA O VALOR DA PARCELA(3º PASSO)
         var valor_emprestado   = Number(tvalor_emprestado.value)                
